--- a/css/app.css
+++ b/css/app.css
@@ -149,7 +149,7 @@ button
 }
 .setaCima
 {
-    top: 0%;
+    top: 1%;
     border-top: 2px solid #000;
     border-left: 2px solid #000;
     border-right: 2px solid #000;
@@ -274,11 +274,87 @@ button
     width: 86%;
     height: 78%;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     border-radius: 41px;
     left: 0%;
     padding: 1.5em;
     overflow-x: hidden;
     overflow-y: auto;
+}
+.textoAlinhado
+{
+    align-items: center;
+    justify-content: center;
+}
+.faleForm
+{
+    width: 21em;
+    height: 18em;
+    position: fixed;
+    right: 0%;
+    bottom: 0%;
+    display: none;
+    transition: 1s ease-out;
+}
+.botaoAbreForm
+{
+    background: #44c2df;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    bottom: 3.5%;
+    right: 2%;
+    border-radius: 3%;
+    border: 1px solid #000;
+    cursor: pointer;
+    transition: 1s ease-out;
+    display: none;
+}
+.faleForm input
+{
+    border-radius: 8px;
+    border: 1px solid;
+    height: 2em;
+    width: 13.8em;
+    padding-left: 1em;
+    margin-bottom: 2.3em;
+    bottom: 0%;
+    position: absolute;
+    padding-right: 3.2em;
+}
+.faleForm input:focus
+{
+    outline: none;
+}
+.faleForm span
+{
+    position: absolute;
+    bottom: 0%;
+    margin-bottom: 2em;
+    height: 1.8em;
+    right: 29%;
+    background: none;
+    border: none;
+    cursor: pointer;
+    border-left: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0em .4em;
+
+}
+
+@keyframes quicaBotao
+{
+    0%
+    {
+        bottom: 3.5%;
+    }
+    50%
+    {
+        bottom:8.5%;
+    }
+    100%
+    {
+        bottom:3.5%;
+    }
 }
