--- a/css/app.css
+++ b/css/app.css
@@ -282,17 +282,19 @@ button
     flex-direction: column;
     overflow: hidden;
     padding-bottom: 2.3em;
+    top: 0%;
 }
 .textoAlinhado
 {
     justify-content: center;
+    height: 73%;
 }
 .texto p, .texto h1
 {
 
     font-family: 'Arcade';
-    color: #17f588;
-    height: auto;
+/*    color: #17f588;
+*/    height: auto;
     display: flex;
     align-items: center;
     padding: .2em 0em;
@@ -303,7 +305,7 @@ button
     line-height: 1.3em;
 
 }
-.texto .mensagemEnviada
+.mensagemEnviada
 {
     color: #1d3934;
     background-color: #17f588;
@@ -482,4 +484,13 @@ small a:hover { border-bottom-color: #222; }
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
   background: #6ebb64 ;
 
+}
+.mensagemDoBeemo
+{
+  color:#17f588;
+}
+.mensagemDesativada
+{
+  color: #17f588 !important;
+  background: transparent !important;
 }
