--- a/css/app.css
+++ b/css/app.css
@@ -27,7 +27,7 @@ button
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #e6e6e6;
+    background: #04aeff;
     position: fixed;
 }
 .BeemoBody
